# calculator_qt

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: calculatorwindow.h  evaluator.h  guessGame.h  mainwindow.h
src/: calculator.cpp  calculatorwindow.cpp  evaluator.cpp  guessGame.cpp  mainwindow.cpp
tests/: evaluator_test.cpp
